# datadog-mcp

./: .channels_cache_v2.json  .env.example  .gitignore  .mcp.json  .users_cache.json  CHANGELOG.md  CLAUDE.md  Dockerfile  MCP_TEST_BASELINE.md  Makefile  README.md  REFACTORING_PLAN.md  RESTORATION_REPORT.md  pyproject.toml  release-please-config.json
.github/: CODEOWNERS
.github/workflows/: release.yml
datadog_mcp/: server.py
datadog_mcp/tools/: add_notebook_cell.py  aggregate_traces.py  check_deployment.py  create_dashboard.py  create_monitor.py  create_notebook.py  dashboard_update_title.py  delete_dashboard.py  delete_monitor.py  delete_notebook.py  delete_notebook_cell.py  get_dashboard.py  get_fingerprints.py  get_logs.py  get_logs_field_values.py  get_metric_field_values.py  get_metric_fields.py  get_metrics.py  get_monitor.py  get_notebook.py  get_notification_rule.py  get_service_definition.py  get_teams.py  get_traces.py  list_dashboards.py  list_metrics.py  list_monitors.py  list_notebooks.py  (+11 more)
tests/: conftest.py  test_api_clients.py  test_api_request_builder.py  test_auth_strategy.py  test_create_monitor_improvements.py  test_critical_paths.py  test_dashboard.py  test_dd_site.py  test_formula_and_deployment.py  test_get_monitor.py  test_http_client.py  test_integration.py  test_logs.py  test_logs_field_values.py  test_metrics.py  test_monitor_edit.py  test_monitors.py  test_notebooks.py  test_notification_rules.py  test_query_syntax_fix.py  test_secrets_provider.py  test_server.py  test_slos.py  test_teams.py  test_tools_working.py  test_traces.py
(+16 files in other folders)
