[project]
name = "datadog-mcp"
version = "0.3.2"
description = "Datadog MCP server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioboto3>=13.0.0",
    "datadog-api-client>=2.39.0",
    "httpx>=0.28.1",
    "mcp>=1.9.4",
]

[project.optional-dependencies]
test = [
    "moto[secretsmanager]>=5.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[project.scripts]
datadog-mcp = "datadog_mcp.server:cli_main"
