[project]
name = "datadog-mcp"
version = "0.0.6"
description = "Datadog MCP server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datadog-api-client>=2.39.0",
    "httpx>=0.28.1",
    "mcp>=1.9.4",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

exclude-newer = "2 weeks"
[project.scripts]
datadog-mcp = "datadog_mcp.server:cli_main"
